-- v?? --
* EditableCString - helper that creates no-the-fly C-style string, that can be modified out of const-char-string and std::string.
* UniqueTypeString<> - string class template for creating string representations that differ only in compile-type.
* build_process v2.0.1 introduced.
* NoInstance base class, blocking creation of instances of derived objects.
* SignalMasker and SignalUnmasker have been implemented; it's helpfull in implementing thread-safe signal handling.
* Thread::ID is now available in user's API.
* added missing library to linkage.

-- v1.0.0 --
* Threads::SafeValue - wrapper making basic types thread-safe, has been implemented.
* Threads::MultiLock class for locking multiple mutexis in a predefined order implemented.
* Threads::Thread thread wrapper added.
* Threads::Sync added for easy synchronizing master-slave threads.
* SharedPtrNotNULL const-fixes.
* support for intel compiler updated.
* build process v1.7.1 introduced.

-- v0.8.0 --
* average and standard deviation computation algorithm has been introduced.
* implemented algorithm for comaprison of floating points with a given precision.
* added two algorithms for addition of floating points with minimal loss of precission.
* new System::Math namespace is present.
* added DivingStack<> template container.
* moved some library internals to System::detail namespace.
* updated AtExit's code so that unregistering dynamic objects (dlclose() call) that registered to AtExit is will be possible.
* added Plugins namespace for handling plugins in external *.so files.
* few typos fixed.
* minor code/style fixes.

-- v0.7.1 --
* fixed issue with convertion from const in SharedPtrNotNULL<>.
* fixed issue with comparison operators in SharedPtrNotNULL<> - now only operators available in boost::shared_ptr<> are available.

-- v0.7.0 --
* OneInstanceAtOnce - guard class that ensures that only one instance of a given object is present at a given time in system.