@@ -17,6 +17,8 @@ namespace System
  *
  *  class implements timer to meauser real (wall) time elapsed.
  *  it has similar to boost::timer API (i.e. timer for measuring CPU time).
+ *
+ *  \warning this timer is less precise than TimerRT - use it instead.
  */
 class Timer
 {
