@@ -1,2 +1,2 @@
 #!/bin/sh
-exec echo "-lboost_thread-mt -lboost_filesystem-mt -lboost_system-mt -lpthread -ldl -rdynamic"
+exec echo "-lboost_thread-mt -lboost_filesystem-mt -lboost_system-mt -lpthread -ldl -rdynamic -lrt"
