@@ -1,4 +1,7 @@
 -- v?? --
+* TimerProcessCPU - high resolution timer for a given process' CPU time.
+* TimerThreadCPU - high resolution timer for a given thread's CPU time.
+* TimerRT - high resolution timer for a realtime measurements.
 * EditableCString - helper that creates no-the-fly C-style string, that can be modified out of const-char-string and std::string.
 * UniqueTypeString<> - string class template for creating string representations that differ only in compile-type.
 * build_process v2.0.1 introduced.
